--- a/files/style.css
+++ b/files/style.css
@@ -232,6 +232,24 @@ body {
     object-position: top;
     display:none;
   }
+
+  .weather {
+    background-color:rgb(16, 161, 16);
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    font-size: 16px;
+    margin: 4px 2px;
+    opacity: 0.6;
+    transition: 0.3s;
+    display: inline-block;
+    text-decoration: none;
+    cursor: pointer;
+    object-position: top;
+    display:none;
+  }
+
   .fireЕxtinguisher {
     background-color:rgba(247, 244, 216, 0.945);
     border: none;
